# swoosh

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.build-venv/: pyvenv.cfg
swoosh/: __init__.py  cli.py
swoosh/modules/: __init__.py  auth.py  check.py  clone.py  commit.py  config.py  deploy.py  hooks.py  init.py  origins.py  pr.py  release.py  secrets.py  sync.py  templates.py  utils.py
